tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/inline-table/duplicate-key.stderr
TOML parse error at line 2, column 4
  |
2 | a={b=1, b=2}
  |    ^
duplicate key `b`
